--- a/bll-chatbot-backend/package.json
+++ b/bll-chatbot-backend/package.json
@@ -12,7 +12,8 @@
     "mysql2": "^3.14.1",
     "nodemon": "^3.1.10",
     "npm": "^11.4.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "winston": "^3.17.0"
   },
   "name": "bll-chatbot-backend",
   "version": "1.0.0",
@@ -31,8 +32,8 @@
     "chromadb": "^2.4.6",
     "content-disposition": "^1.0.0",
     "content-type": "^1.0.5",
-    "cookie-signature": "^1.2.2",
     "cookie": "^0.7.2",
+    "cookie-signature": "^1.2.2",
     "cors": "^2.8.5",
     "debug": "^4.4.0",
     "depd": "^2.0.0",
@@ -77,8 +78,8 @@
     "once": "^1.4.0",
     "openai": "^5.0.1",
     "parseurl": "^1.3.3",
-    "path-to-regexp": "^8.2.0",
     "path": "^0.12.7",
+    "path-to-regexp": "^8.2.0",
     "proxy-addr": "^2.0.7",
     "qs": "^6.14.0",
     "range-parser": "^1.2.1",
@@ -89,10 +90,10 @@
     "send": "^1.2.0",
     "serve-static": "^2.2.0",
     "setprototypeof": "^1.2.0",
+    "side-channel": "^1.1.0",
     "side-channel-list": "^1.0.0",
     "side-channel-map": "^1.0.1",
     "side-channel-weakmap": "^1.0.2",
-    "side-channel": "^1.1.0",
     "sqlite3": "^5.1.7",
     "statuses": "^2.0.1",
     "tiktoken": "^1.0.21",
